src/objects/acfVedaApplicantLink__c.object
<CustomObject>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>click_Applicant__c</referenceTo>
        <relationshipLabel>Veda Applicant Links</relationshipLabel>
        <relationshipName>Veda_Connector</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Creation_date__c</fullName>
        <label>Record Creation date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Veda_Status__c</fullName>
        <label>Veda Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veda_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Veda Summary</label>
        <referenceTo>Veda_Summary__c</referenceTo>
        <relationshipName>Veda_Connector</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Veda Applicant Link</label>
    <nameField>
        <label>Veda Applicant Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Veda Applicant Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>